--- a/fiction.html
+++ b/fiction.html
@@ -74,7 +74,7 @@
                     <p class="bookname"><a class="clickable" href="the_fault_in_our_stars.html">The Fault In Our Stars</a></p>
                 </div>
                 <div>
-                    <img class="bookimages" src="" alt="https://cdn0.fahasa.com/media/catalog/product/i/m/image_179418.jpg">
+                    <img class="bookimages" src="assets\images\fiction_6.jpg" alt="https://cdn0.fahasa.com/media/catalog/product/i/m/image_179418.jpg">
                     <p class="bookname"><a class="non-clickable" href="#">The Book Thief</a></p>
                 </div>
                 <div>
@@ -89,15 +89,15 @@
             </div>
             <div class="subcategory_books">
                 <div >
-                    <img class="bookimages" src="" alt="https://cdn0.fahasa.com/media/catalog/product/t/o/to_kill_a_mockingbird_1_2018_11_02_11_41_49.jpg">
+                    <img class="bookimages" src="assets\images\fiction_1.jpg" alt="https://cdn0.fahasa.com/media/catalog/product/t/o/to_kill_a_mockingbird_1_2018_11_02_11_41_49.jpg">
                     <p class="bookname"><a class="clickable" href="to_kill_a_mockingbird.html">To Kill A Mockingbird</a></a></p>
                 </div>
                 <div>
-                    <img class="bookimages" src="" alt="https://cdn0.fahasa.com/media/catalog/product/t/h/the_great_gatsby_1_2018_10_27_11_49_37.jpg">
+                    <img class="bookimages" src="assets\images\fiction_7.jpg" alt="https://cdn0.fahasa.com/media/catalog/product/t/h/the_great_gatsby_1_2018_10_27_11_49_37.jpg">
                     <p class="bookname"><a class="non-clickable" href="#">The Great Gasby</a></p>
                 </div>
                 <div>
-                    <img class="bookimages" src="" alt="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/les_miserables/2020_05_04_15_15_06_1-390x510.jpg">
+                    <img class="bookimages" src="assets\images\fiction_10.jpg" alt="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/les_miserables/2020_05_04_15_15_06_1-390x510.jpg">
                     <p class="bookname"><a class="non-clickable" href="#">Les Miserables</a></p>
                 </div>
             </div>
