commit nth time

--- a/contactpage.html
+++ b/contactpage.html
@@ -106,12 +106,14 @@
                     <textarea name="" id="" cols="20" rows="5" placeholder="Anything you would love to notify us?"></textarea>
                 </p>
                 <p>
-                    <label for="submit">
-                        <button class="clickable">Clear</button>
-                    </label>
-                    <label for="reset">
-                        <button class="clickable">Submit</button>
-                    </label>
+                    <div id="reset_and_submit">
+                        <label for="submit">
+                            <button class="clickable">Clear</button>
+                        </label>
+                        <label for="reset">
+                            <button class="clickable">Submit</button>
+                        </label>
+                    </div>
                 </p>
             </form>
         </section>
