--- a/feel_good_food.html
+++ b/feel_good_food.html
@@ -40,17 +40,17 @@
         <div id="book_detail_images">
             <div id="main_image">
                 <div>
-                    <img src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/feel_good_food_over_100_healthy_family_recipes/2022_08_23_10_31_48_1-390x510.jpg" alt="">
+                    <img src="assets\images\nonfiction_2.jpg" alt="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/feel_good_food_over_100_healthy_family_recipes/2022_08_23_10_31_48_1-390x510.jpg">
                 </div>
                 <div id="book_detail_subimages">
                     <div>
-                        <img src="https://cdn0.fahasa.com/media/catalog/product/f/e/feel_good_food_over_100_healthy_family_recipes_1_2022_08_23_10_31_48.jpg" alt="">
+                        <img src="assets\images\nonfiction_2.1.jpg" alt="https://cdn0.fahasa.com/media/catalog/product/f/e/feel_good_food_over_100_healthy_family_recipes_1_2022_08_23_10_31_48.jpg">
                     </div>
                     <div>
-                        <img src="https://cdn0.fahasa.com/media/catalog/product/f/e/feel_good_food_over_100_healthy_family_recipes_2_2022_08_23_10_31_48.jpg" alt="">
+                        <img src="assets\images\fiction_2.2.jpg" alt="https://cdn0.fahasa.com/media/catalog/product/f/e/feel_good_food_over_100_healthy_family_recipes_2_2022_08_23_10_31_48.jpg">
                     </div>
                     <div>
-                        <img src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/feel_good_food_over_100_healthy_family_recipes/2022_08_23_10_31_48_3-390x510.jpg" alt="">
+                        <img src="assets\images\fiction_2.3.jpg" alt="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/feel_good_food_over_100_healthy_family_recipes/2022_08_23_10_31_48_3-390x510.jpg">
                     </div>
                 </div>
             </div>
