--- a/how_to_win_friends_and_influence_people.html
+++ b/how_to_win_friends_and_influence_people.html
@@ -40,17 +40,17 @@
         <div id="book_detail_images">
             <div>
                 <div id="main_image">
-                    <img src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_2355.jpg" alt="">
+                    <img src="assets\images\nonfiction_1.jpg" alt="https://cdn0.fahasa.com/media/catalog/product/i/m/image_2355.jpg">
                 </div>
                 <div id="book_detail_subimages">
                     <div>
-                        <img src="https://cdn0.fahasa.com/media/catalog/product/h/o/how_to_win_friends_and_influence_people_3_2018_08_22_14_07_47.png" alt="">
+                        <img src="assets\images\nonfiction_1.1.jpg" alt="https://cdn0.fahasa.com/media/catalog/product/h/o/how_to_win_friends_and_influence_people_3_2018_08_22_14_07_47.png">
                     </div>
                     <div>
-                        <img src="https://cdn0.fahasa.com/media/catalog/product/h/o/how_to_win_friends_and_influence_people_5_2018_08_22_14_07_47.png" alt="">
+                        <img src="assets\images\nonfiction_1.2.jpg" alt="https://cdn0.fahasa.com/media/catalog/product/h/o/how_to_win_friends_and_influence_people_5_2018_08_22_14_07_47.png">
                     </div>
                     <div>
-                        <img src="https://cdn0.fahasa.com/media/catalog/product/h/o/how_to_win_friends_and_influence_people_6_2018_08_22_14_07_47.png" alt="">
+                        <img src="assets\images\nonfiction_1.3.jpg" alt="https://cdn0.fahasa.com/media/catalog/product/h/o/how_to_win_friends_and_influence_people_6_2018_08_22_14_07_47.png">
                     </div>
                 </div>
             </div>
