--- a/journeys_of_a_lifetime.html
+++ b/journeys_of_a_lifetime.html
@@ -40,17 +40,17 @@
         <div id="book_detail_images">
             <div>
                 <div id="main_image">
-                    <img src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/journeys_of_a_lifetime_2nd_edition_500_of_the_worlds_greatest_trips/2022_06_01_13_58_54_1-390x510.jpg" alt="">
+                    <img src="assets\images\nonfiction_4.jpg" alt="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/journeys_of_a_lifetime_2nd_edition_500_of_the_worlds_greatest_trips/2022_06_01_13_58_54_1-390x510.jpg">
                 </div>
                 <div id="book_detail_subimages">
                     <div>
-                        <img src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/journeys_of_a_lifetime_2nd_edition_500_of_the_worlds_greatest_trips/2022_06_01_13_58_54_8-390x510.jpg" alt="">
+                        <img src="assets\images\nonfiction_4.1.jpg" alt="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/journeys_of_a_lifetime_2nd_edition_500_of_the_worlds_greatest_trips/2022_06_01_13_58_54_8-390x510.jpg">
                     </div>
                     <div>
-                        <img src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/journeys_of_a_lifetime_2nd_edition_500_of_the_worlds_greatest_trips/2022_06_01_13_58_54_3-390x510.jpg" alt="">
+                        <img src="assets\images\nonfiction_4.2.jpg" alt="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/journeys_of_a_lifetime_2nd_edition_500_of_the_worlds_greatest_trips/2022_06_01_13_58_54_3-390x510.jpg">
                     </div>
                     <div>
-                        <img src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/journeys_of_a_lifetime_2nd_edition_500_of_the_worlds_greatest_trips/2022_06_01_13_58_54_11-390x510.jpg" alt="">
+                        <img src="assets\images\nonfiction_4.3.jpg" alt="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/journeys_of_a_lifetime_2nd_edition_500_of_the_worlds_greatest_trips/2022_06_01_13_58_54_11-390x510.jpg">
                     </div>
                 </div>
             </div>
