--- a/to_kill_a_mockingbird.html
+++ b/to_kill_a_mockingbird.html
@@ -40,17 +40,17 @@
         <div id="book_detail_images">
             <div>
                 <div id="main_image">
-                    <img src="https://cdn0.fahasa.com/media/catalog/product/t/o/to_kill_a_mockingbird_1_2018_11_02_11_41_49.jpg" alt="">
+                    <img src="assets\images\fiction_1.jpg" alt="https://cdn0.fahasa.com/media/catalog/product/t/o/to_kill_a_mockingbird_1_2018_11_02_11_41_49.jpg">
                 </div>
                 <div id="book_detail_subimages">
                     <div>
-                        <img src="https://cdn0.fahasa.com/media/catalog/product/t/o/to_kill_a_mockingbird_2_2018_11_02_11_41_49.png" alt="">
+                        <img src="assets\images\fiction_1.1.jpg" alt="https://cdn0.fahasa.com/media/catalog/product/t/o/to_kill_a_mockingbird_2_2018_11_02_11_41_49.png">
                     </div>
                     <div>
-                        <img src="https://cdn0.fahasa.com/media/catalog/product/t/o/to_kill_a_mockingbird_4_2018_11_02_11_41_49.png" alt="">
+                        <img src="assets\images\fiction_1.2.jpg" alt="https://cdn0.fahasa.com/media/catalog/product/t/o/to_kill_a_mockingbird_4_2018_11_02_11_41_49.png">
                     </div>
                     <div>
-                        <img src="https://cdn0.fahasa.com/media/catalog/product/t/o/to_kill_a_mockingbird_10_2018_11_02_11_41_49.png" alt="">
+                        <img src="assets\images\fiction_1.3.jpg" alt="https://cdn0.fahasa.com/media/catalog/product/t/o/to_kill_a_mockingbird_10_2018_11_02_11_41_49.png">
                     </div>
                 </div>
             </div>
