--- a/sherlock_holmes_vol1.html
+++ b/sherlock_holmes_vol1.html
@@ -40,17 +40,17 @@
         <div id="book_detail_images">
             <div>
                 <div id="main_image">
-                    <img src="https://cdn0.fahasa.com/media/catalog/product/s/h/sherlock_holmes_the_complete_novels_and_stories__vol_1_1_2018_08_22_10_06_11.jpg" alt="">
+                    <img src="assets\images\fiction_3.jpg" alt="https://cdn0.fahasa.com/media/catalog/product/s/h/sherlock_holmes_the_complete_novels_and_stories__vol_1_1_2018_08_22_10_06_11.jpg">
                 </div>
                 <div id="book_detail_subimages">
                     <div>
-                        <img src="https://cdn0.fahasa.com/media/catalog/product/s/h/sherlock_holmes_the_complete_novels_and_stories__vol_1_2_2018_08_22_10_06_11.png" alt="">
+                        <img src="assets\images\fiction_3.1.jpg" alt="https://cdn0.fahasa.com/media/catalog/product/s/h/sherlock_holmes_the_complete_novels_and_stories__vol_1_2_2018_08_22_10_06_11.png">
                     </div>
                     <div>
-                        <img src="https://cdn0.fahasa.com/media/catalog/product/s/h/sherlock_holmes_the_complete_novels_and_stories__vol_1_3_2018_08_22_10_06_11.png" alt="">
+                        <img src="assets\images\fiction_3.2.jpg" alt="https://cdn0.fahasa.com/media/catalog/product/s/h/sherlock_holmes_the_complete_novels_and_stories__vol_1_3_2018_08_22_10_06_11.png">
                     </div>
                     <div>
-                        <img src="https://cdn0.fahasa.com/media/catalog/product/s/h/sherlock_holmes_the_complete_novels_and_stories__vol_1_4_2018_08_22_10_06_11.png" alt="">
+                        <img src="assets\images\fiction_3.3.jpg" alt="https://cdn0.fahasa.com/media/catalog/product/s/h/sherlock_holmes_the_complete_novels_and_stories__vol_1_4_2018_08_22_10_06_11.png">
                     </div>
                 </div>
             </div>
