--- a/the_fault_in_our_stars.html
+++ b/the_fault_in_our_stars.html
@@ -40,17 +40,17 @@
         <div id="book_detail_images">
             <div>
                 <div id="main_image">
-                    <img src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/the_fault_in_our_stars/2023_03_30_10_46_28_1-390x510.jpg" alt="">
+                    <img src="assets\images\fiction_2.jpg" alt="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/the_fault_in_our_stars/2023_03_30_10_46_28_1-390x510.jpg">
                 </div>
                 <div id="book_detail_subimages">
                     <div>
-                        <img src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/the_fault_in_our_stars/2023_03_30_10_46_28_2-390x510.jpg" alt="">
+                        <img src="assets\images\fiction_2.1.jpg" alt="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/the_fault_in_our_stars/2023_03_30_10_46_28_2-390x510.jpg">
                     </div>
                     <div>
-                        <img src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/the_fault_in_our_stars/2023_03_30_10_46_28_4-390x510.jpg" alt="">
+                        <img src="assets\images\fiction_2.2.jpg" alt="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/the_fault_in_our_stars/2023_03_30_10_46_28_4-390x510.jpg">
                     </div>
                     <div>
-                        <img src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/the_fault_in_our_stars/2023_03_30_10_46_28_8-390x510.jpg" alt="">
+                        <img src="assets\images\fiction_2.3.jpg" alt="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/the_fault_in_our_stars/2023_03_30_10_46_28_8-390x510.jpg">
                     </div>
                 </div>
             </div>
