--- a/feel_good_food.html
+++ b/feel_good_food.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@600&display=swap" rel="stylesheet">
     <link rel="import" href="assets\images">
     <link rel="icon" href="assets\images\beta.png">
+    <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
     <title>Feel Good Food</title>
 </head>
 <body>
