--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Aladin&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@600&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
     <link rel="import" href="assets\images">
     <link rel="icon" href="assets\images\beta.png">
     <title>Beta Online Bookstore</title>
@@ -21,7 +22,6 @@
                 <h1><a href="index.html">Beta Online Bookstore</a></h1>
             </div>
             <div>
-                <a href=""></a>
                 <ul>
                     <li class="top_nav"><a href="index.html">Home</a></li>
                     <li class="top_nav"><a href="fiction.html">Fiction</a></li>
