--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Aladin&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@600&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/9f2cfda33c.js" crossorigin="anonymous"></script>
     <link rel="import" href="assets\images">
     <link rel="icon" href="assets\images\beta.png">
     <title>Beta Online Bookstore</title>
@@ -22,6 +22,10 @@
                 <h1><a href="index.html">Beta Online Bookstore</a></h1>
             </div>
             <div>
+                <input type="checkbox" class="menu_button" id="menu_button">
+                <label for="menu_button" class="menu_icon">
+                    <span class="nav_icon"></span>
+                </label>
                 <ul>
                     <li class="top_nav"><a href="index.html">Home</a></li>
                     <li class="top_nav"><a href="fiction.html">Fiction</a></li>
@@ -33,7 +37,7 @@
     <section id="categories">
         <div class="container">
             <div id="youtube_video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/6ibCtsHgz3Y" title="The importance of reading books" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="480" height="285" src="https://www.youtube.com/embed/6ibCtsHgz3Y" title="The importance of reading books" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
             <div id="quotes">
                 <div>
