--- a/fiction.html
+++ b/fiction.html
@@ -17,19 +17,17 @@
 </head>
 <body>
     <header>
+        <div class="logo">
+            <h1><a href="index.html">Beta Online Bookstore</a></h1>
+        </div>
         <nav id="topnav">
-            <div>
-                <h1><a href="index.html">Beta Online Bookstore</a></h1>
-            </div>
-            <div>
-                <ul>
-                    <li class="top_nav"><a href="index.html">Home</a></li>
-                    <li class="top_nav"><a href="fiction.html">Fiction</a></li>
-                    <li class="top_nav"><a href="non-fiction.html">Non-Fiction</a></li>
-                </ul>
-            </div>
+            <ul class="topnav_links">
+                <li class="top_nav"><a href="index.html">Home</a></li>
+                <li class="top_nav"><a href="fiction.html">Fiction</a></li>
+                <li class="top_nav"><a href="non-fiction.html">Non-Fiction</a></li>
+            </ul>
         </nav>
-    </header>
+    </header> 
     <section id="subcategories">
         <div class="container">
             <div id="youtube_video">
@@ -90,7 +88,7 @@
                 <h2><a>Classics</a></h2>
             </div>
             <div class="subcategory_books">
-                <div >
+                <div>
                     <img class="bookimages" src="assets\images\fiction_1.jpg" alt="https://cdn0.fahasa.com/media/catalog/product/t/o/to_kill_a_mockingbird_1_2018_11_02_11_41_49.jpg">
                     <p class="bookname"><a class="clickable" href="to_kill_a_mockingbird.html">To Kill A Mockingbird</a></a></p>
                 </div>
