--- a/index.html
+++ b/index.html
@@ -17,21 +17,15 @@
 </head>
 <body>
     <header>
+        <div class="logo">
+            <h1><a href="index.html">Beta Online Bookstore</a></h1>
+        </div>
         <nav id="topnav">
-            <div>
-                <h1><a href="index.html">Beta Online Bookstore</a></h1>
-            </div>
-            <div>
-                <input type="checkbox" class="menu_button" id="menu_button">
-                <label for="menu_button" class="menu_icon">
-                    <span class="nav_icon"></span>
-                </label>
-                <ul>
-                    <li class="top_nav"><a href="index.html">Home</a></li>
-                    <li class="top_nav"><a href="fiction.html">Fiction</a></li>
-                    <li class="top_nav"><a href="non-fiction.html">Non-Fiction</a></li>
-                </ul>
-            </div>
+            <ul class="topnav_links">
+                <li class="top_nav"><a href="index.html">Home</a></li>
+                <li class="top_nav"><a href="fiction.html">Fiction</a></li>
+                <li class="top_nav"><a href="non-fiction.html">Non-Fiction</a></li>
+            </ul>
         </nav>
     </header> 
     <section id="categories">
