--- a/journeys_of_a_lifetime.html
+++ b/journeys_of_a_lifetime.html
@@ -16,19 +16,17 @@
 </head>
 <body>
     <header>
+        <div class="logo">
+            <h1><a href="index.html">Beta Online Bookstore</a></h1>
+        </div>
         <nav id="topnav">
-            <div>
-                <h1><a href="index.html">Beta Online Bookstore</a></h1>
-            </div>
-            <div>
-                <ul>
-                    <li class="top_nav"><a href="index.html">Home</a></li>
-                    <li class="top_nav"><a href="fiction.html">Fiction</a></li>
-                    <li class="top_nav"><a href="non-fiction.html">Non-Fiction</a></li>
-                </ul>
-            </div>
+            <ul class="topnav_links">
+                <li class="top_nav"><a href="index.html">Home</a></li>
+                <li class="top_nav"><a href="fiction.html">Fiction</a></li>
+                <li class="top_nav"><a href="non-fiction.html">Non-Fiction</a></li>
+            </ul>
         </nav>
-    </header>
+    </header> 
     <section id="book_details">
         <nav>
             <ul class="breadcrumb">
