--- a/non-fiction.html
+++ b/non-fiction.html
@@ -1,3 +1,21 @@
+<!-- RMIT University Vietnam
+Course: COSC2430 Web Programming
+Semester: 2023A
+Assessment: Assignment 1
+Author: Tran Nguyen Anh Minh
+ID: s3979367
+Acknowledgement: 
+    Basic Rounded Lineal Beta icon - Flaticon (https://www.flaticon.com/free-icon/beta_4743032?term=beta&related_id=4743032)
+    CSS and HTML inspirations from w3schools.com, quantrimang.com and stackoverflow.com: 
+        https://www.w3schools.com/howto/howto_css_breadcrumbs.asp
+        https://stackoverflow.com/questions/4309950/how-to-align-input-forms-in-html
+        https://quantrimang.com/hoc/button-trong-css-163772
+
+A static website for Assignment 1 (Web Programming) 
+    Live URL to the website: https://guitarhero2004.github.io/Static-Website/
+
+    URL to my GitHub repository: https://github.com/GuitarHero2004/Static-Website -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,6 +34,7 @@
     <title>Beta Online Bookstore</title>
 </head>
 <body>
+                                <!-- Header + Top navigation bar -->
     <header>
         <div class="logo">
             <h1><a href="index.html">Beta Online Bookstore</a></h1>
@@ -28,6 +47,8 @@
             </ul>
         </nav>
     </header> 
+                                <!-- Header + Top navigation bar -->
+                    <!-- Section: Containers + Books + Quotes (Definition) + Videos-->
     <section id="subcategories">
         <div class="container">
             <div id="youtube_video">
@@ -102,6 +123,8 @@
             </div>
         </div>
     </section>
+                    <!-- Section: Containers + Books + Quotes (Definition) + Videos -->
+                                <!--Footer + Bottom navigation bar -->
     <footer>
         <nav id="bottomnav">
             <ul>
@@ -113,5 +136,6 @@
             </ul>
         </nav>
     </footer>
+                                <!--Footer + Bottom navigation bar -->
 </body>
 </html>
