--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@ Acknowledgement:
         https://www.w3schools.com/howto/howto_css_breadcrumbs.asp
         https://stackoverflow.com/questions/4309950/how-to-align-input-forms-in-html
         https://quantrimang.com/hoc/button-trong-css-163772
+    Book images: Fahasa: https://www.fahasa.com/
+                 
 
 A static website for Assignment 1 (Web Programming) 
     Live URL to the website: https://guitarhero2004.github.io/Static-Website/
